Add detail description and rate from user

--- a/about-us.html
+++ b/about-us.html
@@ -52,7 +52,7 @@
                         <a href="cart.html">
                             <span class="icon-cart">
                             <i class="fa-solid fa-bag-shopping"></i>
-                            <span class="amount-cart">0</span>
+                            <span class="amount-cart">3</span>
                         </span>
                         </a>
                     </span>
@@ -70,14 +70,14 @@
         <!--    Begin About-us-->
         <div class="about-us container">
             <div class="content-left text-center">
-                <h1>HẠT KEY</h1>
+                <h1>HẠC KEY</h1>
                 <h2>Chuyên cung Key bản quyền windows và <br> phần các mềm văn phòng chuyên nghiệp</h2>
-                <h3>Hạt Key xin chào quý khách!</h3>
-                <P>Tại đây Hạt Key chuyên cung cấp bản quyền Windows và các phần mềm Văn phòng khác. Với giá cả phải
+                <h3>Hạc Key xin chào quý khách!</h3>
+                <P>Tại đây Hạc Key chuyên cung cấp bản quyền Windows và các phần mềm Văn phòng khác. Với giá cả phải
                     chăng mà vẫn đảm bảo chất lượng sản phẩm, cùng với chế độ bảo hành và chăm sóc khách hàng tận
-                    tình. Hạt Key tự tin sẽ làm cho bạn hài lòng ngay từ lần mua hàng đầu tiên!
+                    tình. Hạc Key tự tin sẽ làm cho bạn hài lòng ngay từ lần mua hàng đầu tiên!
                     <br><br>
-                    Hạt Key hân hạnh được phục vụ Quý khách!!</P>
+                    Hạc Key hân hạnh được phục vụ Quý khách!!</P>
             </div>
 
             <div class="content-main">
@@ -87,9 +87,9 @@
                     </div>
                     <div class="content-main-card-content">
                         <p>Luôn sẵn sàng trợ giúp khách hàng trước khi mua hàng, trong quá trình mua hàng và ngay cả
-                            sau khi mua hàng. Hạt Key hiểu rằng giá trị thực sự được tạo ra không chỉ được ở chất
+                            sau khi mua hàng. Hạc Key hiểu rằng giá trị thực sự được tạo ra không chỉ được ở chất
                             lượng của sản phẩm mà còn là cả quá trình chăm sóc khách hàng trước và sau khi mua hàng.
-                            Vì vậy Hạt Key luôn lắng nghe và hỗ trợ hết mình khi khách hàng có nhu cầu.</p>
+                            Vì vậy Hạc Key luôn lắng nghe và hỗ trợ hết mình khi khách hàng có nhu cầu.</p>
                     </div>
                 </div>
                 <div class="content-main-card">
@@ -97,7 +97,7 @@
                         <i class="fa-solid fa-gears"></i>
                     </div>
                     <div class="content-main-card-content">
-                        <p>Sau khi các giao dịch được yêu cầu hoàn tất, Hạt Key sẽ gửi các sản phẩm kỹ thuật số
+                        <p>Sau khi các giao dịch được yêu cầu hoàn tất, Hạc Key sẽ gửi các sản phẩm kỹ thuật số
                             cho khách hàng gần như ngay lập tức. Chúng tôi luôn đảm bảo rằng những hướng dẫn cụ
                             thể và chi tiết nhất sẽ đi kèm với sản phẩm mà bạn nhận được.</p>
                     </div>
@@ -107,9 +107,9 @@
                         <i class="fa-solid fa-globe"></i>
                     </div>
                     <div class="content-main-card-content">
-                        <p>Hạt Key tự tin rằng các sản phẩm phần mềm là 100% chính hãng. Với những ưu điểm không
+                        <p>Hạc Key tự tin rằng các sản phẩm phần mềm là 100% chính hãng. Với những ưu điểm không
                             thể phủ nhận, khách hàng sẽ có những trải nghiệm mua sắm trực tuyến tuyệt vời khi
-                            lựa chọn mua hàng tại Hạt Key.</p>
+                            lựa chọn mua hàng tại Hạc Key.</p>
                     </div>
                 </div>
                 <div class="content-main-card">
@@ -118,9 +118,9 @@
                     </div>
                     <div class="content-main-card-content">
                         <p>Chắc chắn rằng trong mỗi khách hàng khi tham khảo giá cả sản phẩm đều hoài nghi rằng
-                            liệu giá rẻ có đảm bảo chất lượng sản phẩm hay không ??. Hạt Key xin cam kết rằng
+                            liệu giá rẻ có đảm bảo chất lượng sản phẩm hay không ??. Hạc Key xin cam kết rằng
                             phần mềm và sản phẩm đều là chính hãng. nếu khách hàng không hài lòng về chất lượng
-                            sản phẩm hãy liên hệ với bộ phận hỗ trợ . Hạt Key sẽ khắc phục sự cố và đổi trả sản
+                            sản phẩm hãy liên hệ với bộ phận hỗ trợ . Hạc Key sẽ khắc phục sự cố và đổi trả sản
                             phẩm theo yêu cầu của khách hàng.</p>
                     </div>
                 </div>
@@ -128,18 +128,17 @@
 
             <div class="content-aboutUs">
                 <div class="content-aboutUs-img">
-                    <img src="image/about_us.png" alt="">
+                    <img src="image/about_us-compressed.jpg" alt="">
                 </div>
                 <div class="content-aboutUs-right">
                     <h1>Về chúng tôi</h1>
-                    <p>Với kinh nghiệm nhiều năm trên thị trường phầm mềm ở Vietnam, Hạt Key hiểu được nhu cầu thị
+                    <p>Với kinh nghiệm nhiều năm trên thị trường phầm mềm ở Việt Nam, Hạc Key hiểu được nhu cầu thị
                         yếu của thị trường và người sử dụng phần mềm. Để đưa ra một mức giá cả hợp lý đáp ứng đầy đủ
                         nhu cầu cần thiết cho người dùng cá nhân và tại các cơ quan.
-                        Là một Partner phân phối sản phẩm cho Microsoft. Hạt Key mang lại cho người dùng những sản
-                        phẩm chính hãng chất lượng nhưng giá cả phải chăng phù hợp với mọi tầng lớp người lao động ở
-                        Vietnam.
+                        Là một đối tác phân phối sản phẩm cho Microsoft. Hạc Key mang lại cho người dùng những sản
+                        phẩm chính hãng chất lượng nhưng giá cả phải chăng phù hợp với mọi người.
                         <br/>
-                        Hạt Key luôn sẵn sàng lắng nghe và phát triển cùng khách hàng! Và hãy liên hệ chúng tôi nếu
+                        Hạc Key luôn sẵn sàng lắng nghe và phát triển cùng khách hàng! Và hãy liên hệ chúng tôi nếu
                         bạn cần giúp đỡ!
                     </p>
                 </div>
