--- a/cart.html
+++ b/cart.html
@@ -52,7 +52,7 @@
                         <a href="cart.html">
                             <span class="icon-cart">
                             <i class="fa-solid fa-bag-shopping"></i>
-                            <span class="amount-cart">0</span>
+                            <span class="amount-cart">3</span>
                         </span>
                         </a>
                     </span>
@@ -137,7 +137,7 @@
                             <li class="totalRow"><span class="label">Chi phí vận chuyển:</span><span class="value">Miễn phí</span></li>
                             <li class="totalRow"><span class="label">Thuế VAT (10%):</span><span class="value">100.000 VND</span></li>
                             <li class="totalRow final"><span class="label">Thành tiền:</span><span class="value">1.100.000 VND</span></li>
-                            <li class="totalRow_button"><a href="#" class="btn_payment">Thanh toán</a></li>
+                            <li class="totalRow_button"><a href="checkout.html" class="btn_payment">Thanh toán</a></li>
                         </ul>
                     </div>
                 </div>
