--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <a href="cart.html">
                             <span class="icon-cart">
                             <i class="fa-solid fa-bag-shopping"></i>
-                            <span class="amount-cart">0</span>
+                            <span class="amount-cart">3</span>
                         </span>
                         </a>
                     </span>
@@ -69,10 +69,12 @@
     <!--    Begin SlideShow-->
     <div id="slideShow">
         <div class="position-relative">
-            <img class="mySlides" src="image/slideshow/windows.png" alt="">
-            <img class="mySlides" src="image/slideshow/raw.jpg" alt="">
-            <img class="mySlides" src="image/slideshow/adobe.jpg" alt="">
-
+<!--            <img class="mySlides" src="image/slideshow/windows.png" alt="">-->
+<!--            <img class="mySlides" src="image/slideshow/raw.jpg" alt="">-->
+<!--            <img class="mySlides" src="image/slideshow/adobe.jpg" alt="">-->
+            <img class="mySlides" src="image/slideshow/win11-2-compressed.jpg" alt="">
+            <img class="mySlides" src="image/slideshow/office-365-1-compressed.jpg" alt="">
+            <img class="mySlides" src="image/slideshow/adobe%201-compressed.jpg" alt="">
             <div class="dotList">
                 <span class="dot" onclick="currentDiv(1)"></span>
                 <span class="dot" onclick="currentDiv(2)"></span>
@@ -129,7 +131,7 @@
                         </a>
                         <p class="product-type">Windows</p>
                         <a href="detail.html"><p class="product-name">Windows 11 Pro Mak</p></a>
-                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <span class="product-price">900.000</span><span class="currency">VND</span>
                         <div class="product-choose">
                             <button class="add-to-cart">
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
@@ -145,7 +147,7 @@
                         </a>
                         <p class="product-type">Windows</p>
                         <a href="detail.html"><p class="product-name">Windows 11 Home</p></a>
-                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <span class="product-price">239.000</span><span class="currency">VND</span>
                         <div class="product-choose">
                             <button class="add-to-cart">
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
@@ -161,7 +163,7 @@
                         </a>
                         <p class="product-type">Windows</p>
                         <a href="detail.html"><p class="product-name">Windows 11 Enterprise</p></a>
-                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <span class="product-price">499.000</span><span class="currency">VND</span>
                         <div class="product-choose">
                             <button class="add-to-cart">
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
@@ -177,7 +179,7 @@
                         </a>
                         <p class="product-type">Windows</p>
                         <a href="detail.html"><p class="product-name">Office 365 Peronal (5 Thiết bị)</p></a>
-                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <span class="product-price">999.000</span><span class="currency">VND</span>
                         <div class="product-choose">
                             <button class="add-to-cart">
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
@@ -193,7 +195,7 @@
                         </a>
                         <p class="product-type">Windows</p>
                         <a href="detail.html"><p class="product-name">Office 2021 Professional Plus</p></a>
-                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <span class="product-price">329.000</span><span class="currency">VND</span>
                         <div class="product-choose">
                             <button class="add-to-cart">
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
@@ -209,7 +211,7 @@
                         </a>
                         <p class="product-type">Windows</p>
                         <a href="detail.html"><p class="product-name">Outlock 2021</p></a>
-                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <span class="product-price">319.000</span><span class="currency">VND</span>
                         <div class="product-choose">
                             <button class="add-to-cart">
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
@@ -225,7 +227,7 @@
                         </a>
                         <p class="product-type">Windows</p>
                         <a href="detail.html"><p class="product-name">Affinity Designer</p></a>
-                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <span class="product-price">459.000</span><span class="currency">VND</span>
                         <div class="product-choose">
                             <button class="add-to-cart">
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
@@ -241,7 +243,7 @@
                         </a>
                         <p class="product-type">Windows</p>
                         <a href="detail.html"><p class="product-name">Youtube Premium</p></a>
-                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <span class="product-price">399.000</span><span class="currency">VND</span>
                         <div class="product-choose">
                             <button class="add-to-cart">
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
@@ -266,7 +268,7 @@
                         </a>
                         <p class="product-type">Windows</p>
                         <a href="detail.html"><p class="product-name">Windows 10 Education</p></a>
-                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <span class="product-price">249.000</span><span class="currency">VND</span>
                         <div class="product-choose">
                             <button class="add-to-cart">
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
@@ -282,7 +284,7 @@
                         </a>
                         <p class="product-type">Windows</p>
                         <a href="detail.html"><p class="product-name">Windows 10 Pro</p></a>
-                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <span class="product-price">299.000</span><span class="currency">VND</span>
                         <div class="product-choose">
                             <button class="add-to-cart">
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
@@ -298,7 +300,7 @@
                         </a>
                         <p class="product-type">Windows</p>
                         <a href="detail.html"><p class="product-name">Office Home & Business</p></a>
-                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <span class="product-price">499.000</span><span class="currency">VND</span>
                         <div class="product-choose">
                             <button class="add-to-cart">
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
@@ -314,7 +316,7 @@
                         </a>
                         <p class="product-type">Windows</p>
                         <a href="detail.html"><p class="product-name">Office 2019 Home & Student</p></a>
-                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <span class="product-price">299.000</span><span class="currency">VND</span>
                         <div class="product-choose">
                             <button class="add-to-cart">
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
@@ -330,7 +332,7 @@
                         </a>
                         <p class="product-type">Windows</p>
                         <a href="detail.html"><p class="product-name">Bkav Professsional</p></a>
-                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <span class="product-price">199.000</span><span class="currency">VND</span>
                         <div class="product-choose">
                             <button class="add-to-cart">
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
@@ -346,7 +348,7 @@
                         </a>
                         <p class="product-type">Windows</p>
                         <a href="detail.html"><p class="product-name">McAfee Internet Security</p></a>
-                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <span class="product-price">159.000</span><span class="currency">VND</span>
                         <div class="product-choose">
                             <button class="add-to-cart">
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
@@ -362,7 +364,7 @@
                         </a>
                         <p class="product-type">Windows</p>
                         <a href="detail.html"><p class="product-name">Office 2016 Professional Plus</p></a>
-                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <span class="product-price">859.000</span><span class="currency">VND</span>
                         <div class="product-choose">
                             <button class="add-to-cart">
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
@@ -378,7 +380,7 @@
                         </a>
                         <p class="product-type">Windows</p>
                         <a href="detail.html"><p class="product-name">Windows 10 Home</p></a>
-                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <span class="product-price">199.000</span><span class="currency">VND</span>
                         <div class="product-choose">
                             <button class="add-to-cart">
                                 <i class="fa-solid fa-cart-plus"></i>Thêm Vào Giỏ
